cabal-version:      3.0
name:               kpbj-api
version:            0.1.0.2
license:            Apache-2.0
license-file:       LICENSE
author:             Solomon Bothwell
maintainer:         ssbothwell@gmail.com
build-type:         Simple

--------------------------------------------------------------------------------

common common-extensions
  default-extensions:
      DataKinds
      DerivingStrategies
      DeriveAnyClass
      DerivingVia
      DeriveGeneric
      FlexibleContexts
      FlexibleInstances
      GADTs
      GeneralizedNewtypeDeriving
      ImportQualifiedPost
      InstanceSigs
      LambdaCase
      MultiParamTypeClasses
      OverloadedStrings
      RankNTypes
      RecordWildCards
      TypeApplications
      TypeOperators
      TypeSynonymInstances

--------------------------------------------------------------------------------

executable kpbj-api
  import:           common-extensions
  main-is:          Main.hs
  build-depends:    base
                  , kpbj-api
                  , web-server-core
  hs-source-dirs:   app
  default-language: Haskell2010
  ghc-options:    -Wall -threaded -rtsopts -with-rtsopts=-N

--------------------------------------------------------------------------------

library
  import: common-extensions
  build-depends:
                  , aeson
                  , base
                  , data-has
                  , deriving-aeson
                  , exceptions
                  , hasql
                  , hasql-interpolate
                  , hasql-pool
                  , hs-opentelemetry-sdk
                  , http-api-data
                  , http-conduit
                  , http-types
                  , log-base
                  , lucid2
                  , mtl
                  , network
                  , password
                  , servant
                  , servant-multipart
                  , servant-server
                  , string-interpolate
                  , text
                  , text-display
                  , unliftio-core
                  , validation
                  , web-server-core
  exposed-modules:
    API
    API.About.Get
    API.Donate.Get
    API.Get
    API.PrivacyPolicy.Get
    API.Static.Get
    API.TermsOfService.Get
    API.User.Login.Get
    API.User.Login.Form
    API.User.Login.Post
    API.User.Logout.Get
    API.User.Logout.Post
    API.User.Register.Get
    API.User.Register.Form
    API.User.Register.Post
    Component.Frame
    Effects.Database.Tables.UserMetadata
    Lucid.Extras
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options:    -Wall -threaded
