cabal-version:      3.0
name:               kpbj-api
version:            0.1.0.2
license:            Apache-2.0
license-file:       LICENSE
author:             Solomon Bothwell
maintainer:         ssbothwell@gmail.com
build-type:         Simple

--------------------------------------------------------------------------------

common common-extensions
  default-extensions:
      DataKinds
      DerivingStrategies
      DeriveAnyClass
      DerivingVia
      DeriveGeneric
      FlexibleContexts
      FlexibleInstances
      GADTs
      GeneralizedNewtypeDeriving
      ImportQualifiedPost
      InstanceSigs
      LambdaCase
      MultiParamTypeClasses
      OverloadedRecordDot
      OverloadedStrings
      RankNTypes
      RecordWildCards
      TypeApplications
      TypeOperators
      TypeSynonymInstances

--------------------------------------------------------------------------------

executable kpbj-api
  import:           common-extensions
  main-is:          Main.hs
  build-depends:    base
                  , kpbj-api
                  , web-server-core
  hs-source-dirs:   app
  default-language: Haskell2010
  ghc-options:    -Wall -threaded -rtsopts -with-rtsopts=-N

--------------------------------------------------------------------------------

library
  import: common-extensions
  build-depends:
                  , aeson
                  , base
                  , bytestring
                  , data-has
                  , deriving-aeson
                  , directory
                  , exceptions
                  , filepath
                  , hasql
                  , hasql-interpolate
                  , hasql-pool
                  , hs-opentelemetry-sdk
                  , http-api-data
                  , http-conduit
                  , http-types
                  , log-base
                  , lucid2
                  , mtl
                  , network
                  , password
                  , servant
                  , servant-multipart
                  , servant-server
                  , string-interpolate
                  , temporary
                  , text
                  , text-display
                  , time
                  , unliftio-core
                  , validation
                  , wai-extra
                  , web-server-core
  exposed-modules:
    API
    API.About.Get
    API.Blog.Get
    API.Blog.New.Get
    API.Blog.New.Post
    API.Blog.Post.Get
    API.Donate.Get
    API.Events.Get
    API.Events.New.Get
    API.Events.New.Post
    API.Events.Event.Get
    API.Get
    API.PrivacyPolicy.Get
    API.Static.Get
    API.TermsOfService.Get
    API.User.Login.Get
    API.User.Login.Form
    API.User.Login.Post
    API.User.Logout.Get
    API.User.Logout.Post
    API.User.Register.Get
    API.User.Register.Form
    API.User.Register.Post
    Component.Frame
    Domain.Types.Episode
    Domain.Types.FileStorage
    Domain.Types.FileUpload
    Domain.Types.PageView
    Domain.Types.Show
    Domain.Types.ShowBlog
    Effects.Database.Tables.Blog
    Effects.Database.Tables.Episode
    Effects.Database.Tables.Events
    Effects.Database.Tables.Show
    Effects.Database.Tables.ShowBlog
    Effects.Database.Tables.UserMetadata
    Effects.FileUpload
    Lucid.Extras
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options:    -Wall -threaded
