cabal-version:      3.0
name:               kpbj-api
version:            0.1.0.2
license:            Apache-2.0
license-file:       LICENSE
author:             Solomon Bothwell
maintainer:         ssbothwell@gmail.com
build-type:         Simple

--------------------------------------------------------------------------------

common common-extensions
  default-extensions:
      DataKinds
      DerivingStrategies
      DeriveAnyClass
      DerivingVia
      DeriveGeneric
      FlexibleContexts
      FlexibleInstances
      GADTs
      GeneralizedNewtypeDeriving
      ImportQualifiedPost
      InstanceSigs
      LambdaCase
      MultiParamTypeClasses
      OverloadedRecordDot
      OverloadedStrings
      RankNTypes
      RecordWildCards
      TypeApplications
      TypeOperators
      TypeSynonymInstances

--------------------------------------------------------------------------------

executable kpbj-api
  import:           common-extensions
  main-is:          Main.hs
  build-depends:    base
                  , kpbj-api
                  , web-server-core
  hs-source-dirs:   app
  default-language: Haskell2010
  ghc-options:    -Wall -threaded -rtsopts -with-rtsopts=-N

--------------------------------------------------------------------------------

library
  import: common-extensions
  build-depends:
                  , aeson
                  , base
                  , bytestring
                  , data-has
                  , deriving-aeson
                  , directory
                  , exceptions
                  , filepath
                  , hasql
                  , hasql-interpolate
                  , hasql-pool
                  , hasql-transaction
                  , hs-opentelemetry-sdk
                  , http-api-data
                  , http-conduit
                  , http-types
                  , log-base
                  , lucid2
                  , mtl
                  , network
                  , password
                  , servant
                  , servant-multipart
                  , servant-server
                  , string-interpolate
                  , temporary
                  , text
                  , text-display
                  , time
                  , transformers
                  , unliftio-core
                  , validation
                  , wai-extra
                  , web-server-core
  exposed-modules:
    API
    API.About.Get
    API.About.Get.Templates
    API.Blog.Get
    API.Blog.Get.Templates.Error
    API.Blog.Get.Templates.Page
    API.Blog.Get.Templates.Pagination
    API.Blog.Get.Templates.PostCard
    API.Blog.New.Get
    API.Blog.New.Get.Templates.Error
    API.Blog.New.Get.Templates.Form
    API.Blog.New.Post
    API.Blog.Post.Get
    API.Blog.Post.Get.Templates.Page
    API.Donate.Get
    API.Donate.Get.Templates
    API.Episodes.Edit.Get
    API.Episodes.Edit.Get.Templates.Error
    API.Episodes.Edit.Get.Templates.Form
    API.Episodes.Edit.Post
    API.Episodes.Upload.Get
    API.Episodes.Upload.Get.Templates.Error
    API.Episodes.Upload.Get.Templates.Fields
    API.Episodes.Upload.Get.Templates.Form
    API.Episodes.Upload.Get.Templates.Scripts
    API.Episodes.Upload.Post
    API.Episodes.Upload.Post.Templates.Result
    API.Events.Get
    API.Events.Get.Templates.Controls
    API.Events.Get.Templates.Error
    API.Events.Get.Templates.List
    API.Events.Get.Templates.MonthView
    API.Events.Get.Templates.Page
    API.Events.Get.Templates.WeekView
    API.Events.New.Get
    API.Events.New.Get.Templates.Auth
    API.Events.New.Get.Templates.Form
    API.Events.New.Post
    API.Events.Event.Get
    API.Events.Event.Get.Templates.Page
    API.Get
    API.Get.Templates
    API.Host.Dashboard.Get
    API.Host.Dashboard.Get.Templates.Auth
    API.Host.Dashboard.Get.Templates.BlogPost
    API.Host.Dashboard.Get.Templates.Episode
    API.Host.Dashboard.Get.Templates.Page
    API.Host.Dashboard.Get.Templates.Schedule
    API.Host.Dashboard.Get.Templates.Stats
    API.Media.Get
    API.PrivacyPolicy.Get
    API.PrivacyPolicy.Get.Templates
    API.Show.Get
    API.Show.Get.Templates.Episode
    API.Show.Get.Templates.Page
    API.Show.Get.Templates.ShowHeader
    API.Show.Get.Templates.Sidebar
    API.Shows.Get
    API.Shows.Get.Templates.Error
    API.Shows.Get.Templates.Page
    API.Shows.Get.Templates.Pagination
    API.Shows.Get.Templates.ShowCard
    API.Static.Get
    API.TermsOfService.Get
    API.TermsOfService.Get.Templates
    API.User.Login.Get
    API.User.Login.Form
    API.User.Login.Post
    API.User.Logout.Get
    API.User.Logout.Post
    API.User.Register.Get
    API.User.Register.Form
    API.User.Register.Post
    App.Common
    Component.Frame
    Domain.Types.PostStatus
    Domain.Types.Cookie
    Domain.Types.FileStorage
    Domain.Types.FileUpload
    Domain.Types.Genre
    Domain.Types.HxRequest
    Domain.Types.PageNumber
    Domain.Types.PageView
    Domain.Types.Search
    Effects.Database.Tables.BlogPosts
    Effects.Database.Tables.BlogTags
    Effects.Database.Tables.Episodes
    Effects.Database.Tables.EpisodeTrack
    Effects.Database.Tables.Events
    Effects.Database.Tables.EventTags
    Effects.Database.Tables.HostDetails
    Effects.Database.Tables.Shows
    Effects.Database.Tables.ShowBlogPosts
    Effects.Database.Tables.ShowBlogTags
    Effects.Database.Tables.ShowHost
    Effects.Database.Tables.ShowSchedule
    Effects.Database.Tables.UserMetadata
    Effects.FileUpload
    Lucid.Extras
    Utils
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options:    -Wall -threaded -Werror -Wno-missed-extra-shared-lib
