cabal-version:      3.0
name:               audio-normalize
version:            0.1.0
license:            Apache-2.0
author:             Solomon Bothwell
maintainer:         ssbothwell@gmail.com
build-type:         Simple

executable audio-normalize
  main-is:          Main.hs
  build-depends:    base
                  , aeson
                  , bytestring
                  , directory
                  , filepath
                  , hasql
                  , optparse-applicative
                  , temporary
                  , text
                  , typed-process
  hs-source-dirs:   .
  default-language: Haskell2010
  default-extensions:
      ImportQualifiedPost
      LambdaCase
      OverloadedStrings
      RecordWildCards
      ScopedTypeVariables
      StrictData
      TypeApplications
  ghc-options:      -Wall -threaded
