cabal-version:      3.0
name:               listener-snapshots
version:            0.1.0
license:            Apache-2.0
author:             Solomon Bothwell
maintainer:         ssbothwell@gmail.com
build-type:         Simple

executable listener-snapshots
  main-is:          Main.hs
  build-depends:    base
                  , aeson
                  , bytestring
                  , hasql
                  , http-client
                  , http-conduit
                  , log-base
                  , text
  hs-source-dirs:   .
  default-language: Haskell2010
  default-extensions:
      ImportQualifiedPost
      NumericUnderscores
      OverloadedStrings
      RecordWildCards
      ScopedTypeVariables
      StrictData
      TypeApplications
  ghc-options:      -Wall -threaded
