cabal-version:      3.0
name:               order-cleanup
version:            0.1.0
license:            Apache-2.0
author:             Solomon Bothwell
maintainer:         ssbothwell@gmail.com
build-type:         Simple

executable order-cleanup
  main-is:          Main.hs
  build-depends:    base
                  , aeson
                  , hasql
                  , kpbj-database
                  , log-base
                  , optparse-applicative
                  , text
  hs-source-dirs:   .
  default-language: Haskell2010
  default-extensions:
      ImportQualifiedPost
      LambdaCase
      OverloadedStrings
      QuasiQuotes
      RecordWildCards
      ScopedTypeVariables
      StrictData
  ghc-options:      -Wall -threaded
