cabal-version:      3.0
name:               sync-host-emails
version:            0.1.0
license:            Apache-2.0
author:             Solomon Bothwell
maintainer:         ssbothwell@gmail.com
build-type:         Simple

executable sync-host-emails
  main-is:          Main.hs
  other-modules:    GoogleGroups
                  , Database
  build-depends:    base
                  , aeson
                  , bytestring
                  , containers
                  , crypton-x509
                  , crypton-x509-store
                  , hasql
                  , http-client
                  , http-conduit
                  , http-types
                  , jose               >= 0.11 && < 0.12
                  , optparse-applicative
                  , rel8
                  , string-interpolate
                  , text
                  , time
                  , transformers
  hs-source-dirs:   .
  default-language: Haskell2010
  default-extensions:
      BlockArguments
      DerivingStrategies
      ImportQualifiedPost
      LambdaCase
      NumericUnderscores
      OverloadedStrings
      QuasiQuotes
      RecordWildCards
      StrictData
      TypeApplications
  ghc-options:      -Wall -threaded
