cabal-version:      3.0
name:               token-cleanup
version:            0.1.0
license:            Apache-2.0
author:             Solomon Bothwell
maintainer:         ssbothwell@gmail.com
build-type:         Simple

executable token-cleanup
  main-is:          Main.hs
  build-depends:    base
                  , hasql
                  , optparse-applicative
                  , text
  hs-source-dirs:   .
  default-language: Haskell2010
  default-extensions:
      ImportQualifiedPost
      OverloadedStrings
      RecordWildCards
      ScopedTypeVariables
      StrictData
  ghc-options:      -Wall -threaded
