cabal-version:      3.0
name:               easypost-http
version:            0.1.0.0
synopsis:           Thin EasyPost API client via servant-client
license:            BSD-3-Clause
author:             Solomon Bothwell
maintainer:         ssbothwell@gmail.com
build-type:         Simple

--------------------------------------------------------------------------------

common common-extensions
  default-extensions:
      DataKinds
      DeriveAnyClass
      DeriveGeneric
      DerivingStrategies
      DuplicateRecordFields
      GeneralizedNewtypeDeriving
      ImportQualifiedPost
      LambdaCase
      NoFieldSelectors
      OverloadedRecordDot
      OverloadedStrings
      StrictData
      TypeOperators

--------------------------------------------------------------------------------

library
  import: common-extensions
  build-depends:
      aeson
    , base
    , base64-bytestring
    , bytestring
    , http-client
    , servant
    , servant-client
    , text
    , time
  exposed-modules:
    EasyPost.API
    EasyPost.Client
    EasyPost.Types
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall -Werror

--------------------------------------------------------------------------------

test-suite easypost-http-test
  import: common-extensions
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  other-modules:
    EasyPost.IntegrationSpec
    EasyPost.TypesSpec
  default-language: Haskell2010
  build-depends:
      aeson
    , base
    , bytestring
    , easypost-http
    , hspec
    , http-client
    , http-client-tls
    , text
  ghc-options: -Wall -Werror -threaded
